# teensy-x86-spi-stubs

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: teensy_x86_spi_stubs.cmake.in
src/: CMakeLists.txt  SPI.cpp  SPI.h
